force-app/main/default/objects/Integration_Source_Config__c/Integration_Source_Config__c.object-meta.xml
<CustomObject>
    <description>Parent configuration record defining an API integration source (e.g., CP API, Website API, Broker API). Each source maps to one or more target Salesforce objects and holds the field mapping rules as children.</description>
    <label>Integration Source Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Source Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>