force-app/main/default/objects/Integration_Source_Config__c/fields/API_Schema_JSON__c.field-meta.xml
<CustomField>
    <fullName>API_Schema_JSON__c</fullName>
    <description>JSON array defining available API fields for this source. Format: [{&quot;name&quot;:&quot;field_name&quot;,&quot;label&quot;:&quot;Field Label&quot;,&quot;type&quot;:&quot;String&quot;,&quot;required&quot;:true}]. Used by the mapping designer UI.</description>
    <label>API Schema JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>