force-app/main/default/objects/Integration_Source_Config__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of this integration source and its purpose.</description>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>