force-app/main/default/objects/Integration_Source_Config__c/fields/Enable_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Enable_Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the Generic Integration API checks for duplicate records using DuplicationDetectionHelper before inserting. Requires a matching Duplication_Configuration__c record for the target object.</description>
    <label>Enable Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>