force-app/main/default/objects/Integration_Source_Config__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>The REST API endpoint URL path for this integration source (e.g., /services/apexrest/integration/WEBSITE_LEAD). Auto-generated by the Integration Mapping Designer based on the Source Name.</description>
    <label>Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>