force-app/main/default/objects/Integration_Source_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this integration source config is active. Only active configs are used at runtime.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>