force-app/main/default/objects/Integration_Source_Config__c/fields/Last_Modified_By_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_User__c</fullName>
    <description>Tracks who last modified the mapping configuration through the UI.</description>
    <label>Last Modified By User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>