force-app/main/default/objects/Integration_Source_Config__c/fields/Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Name__c</fullName>
    <description>Unique identifier for this integration source (e.g., CP_API, WEBSITE_API, BROKER_API)</description>
    <externalId>true</externalId>
    <label>Source Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>