force-app/main/default/objects/Integration_Source_Config__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>API name of the target Salesforce object (e.g., Lead__c, Channel_Partner__c, Enquiry_Source__c)</description>
    <label>Target Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>