force-app/main/default/objects/Integration_Source_Config__c/fields/Validation_Rules_JSON__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rules_JSON__c</fullName>
    <description>JSON array of validation rules for API fields. Format: [{&quot;field&quot;:&quot;mobile&quot;,&quot;regex&quot;:&quot;[0-9]{10}&quot;,&quot;message&quot;:&quot;Must be 10 digits&quot;}]</description>
    <label>Validation Rules JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>