force-app/main/default/objects/Integration_Source_Config__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Version number of this mapping configuration. Increment when updating mappings for audit/rollback.</description>
    <label>Version</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>